trunk/Archive2/21/e0565bcb49b381/output
main.cpp: In function 'int main()':
main.cpp:10:3: error: 'print' was not declared in this scope
   print f("ingresar a");
   ^
main.cpp:11:3: error: 'scan' was not declared in this scope
   scan f("%F",&a);
   ^
main.cpp:12:9: error: expected ';' before 'f'
   print f("ingresar b");
         ^
main.cpp:13:9: error: expected ';' before 'f'
   print f("ingresar x")
         ^
main.cpp:15:9: error: redeclaration of 'float y'
   float y=b*x/a;
         ^
main.cpp:9:9: note: 'float y' previously declared here
   float y =0;
         ^
main.cpp:16:11: error: unable to find string literal operator 'operator""y'
   printf ("y es: %f"y);
           ^
main.cpp:9:9: warning: unused variable 'y' [-Wunused-variable]
   float y =0;
         ^
