trunk/Archive2/21/e0565bcb49b381/main.cpp
#include <stdio.h>

int main (void)
{
    // y= resultado.a= dividendo.b= mutiplica x
  float a =0;
  float b =0;
  float x =0;
  float y =0;
  print f("ingresar a");
  scan f("%F",&a);
  print f("ingresar b");
  print f("ingresar x")
  scan f("%F",x);
  float y=b*x/a;
  printf ("y es: %f"y);
	return 0;
}
   
